[gd_scene load_steps=19 format=3 uid="uid://b6044fncy35yu"]

[ext_resource type="Texture2D" uid="uid://byf8wh4qw8ufn" path="res://icon.svg" id="1_ewrbe"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_ii8yk"]
[ext_resource type="Texture2D" uid="uid://553jcy87uhr" path="res://Art Assets/Tile sheet ver 3 door fixed and Charac sheet 2/Charac sheet ver 2.png" id="3_h11ye"]
[ext_resource type="Texture2D" uid="uid://dhddbptx2017g" path="res://Art Assets/Tile sheet ver 3 door fixed and Charac sheet 2/Charac sheet ver 2 - Copy.png" id="4_4er0c"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0mcy6"]
radius = 7.35292
height = 16.6665

[sub_resource type="AtlasTexture" id="AtlasTexture_kxymj"]
atlas = ExtResource("3_h11ye")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_satdv"]
atlas = ExtResource("3_h11ye")
region = Rect2(0, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp30n"]
atlas = ExtResource("4_4er0c")
region = Rect2(0, 192, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjbu3"]
atlas = ExtResource("4_4er0c")
region = Rect2(0, 240, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgitg"]
atlas = ExtResource("4_4er0c")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aubi"]
atlas = ExtResource("4_4er0c")
region = Rect2(64, 48, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ddmui"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxymj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_satdv")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp30n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjbu3")
}],
"loop": true,
"name": &"attack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgitg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aubi")
}],
"loop": true,
"name": &"run",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_carxc"]
atlas = ExtResource("4_4er0c")
region = Rect2(192, 48, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_org2v"]
atlas = ExtResource("4_4er0c")
region = Rect2(192, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj5d4"]
atlas = ExtResource("4_4er0c")
region = Rect2(224, 144, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhqm8"]
atlas = ExtResource("4_4er0c")
region = Rect2(224, 96, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_j7t3j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_carxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_org2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj5d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhqm8")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0vhp5"]
height = 33.3348

[node name="Player" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 15
script = ExtResource("1_ii8yk")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_ewrbe")

[node name="WalkCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.680002, 0.120001)
shape = SubResource("CapsuleShape2D_0mcy6")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(1, -24)
sprite_frames = SubResource("SpriteFrames_ddmui")
animation = &"Idle"

[node name="FistAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -25)
sprite_frames = SubResource("SpriteFrames_j7t3j")
animation = &"attack"

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, -16)
scale = Vector2(0.695354, 0.779966)
shape = SubResource("CapsuleShape2D_0vhp5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AttackRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 20)
collision_mask = 2
